Fix mobile nav alignment

--- a/app/scss/nav.scss
+++ b/app/scss/nav.scss
@@ -1,6 +1,7 @@
 .nav{
 	margin: $space*4 auto 0;
   position: relative;
+  right: $space*1.5;
   width: 300px;
 
   @include bp(xs) {
